# vws-web-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Makefile  README.rst  dev-requirements.txt  lint.mk  pyproject.toml  requirements.txt  setup.cfg  setup.py  spelling_private_dict.txt
.github/workflows/: ci.yml  create-databases.yml  lint.yml  release.yml
docs/: Makefile
docs/source/: conf.py  contributing.rst  index.rst  python-api.rst  release-process.rst
my_mypy_plugin/: __init__.py  mypy_plugin.py
requirements/: dev-requirements.txt  setup-requirements.txt
src/my_mypy_plugin/: mypy_plugin.py
src/vws-web-tools/: __init__.py
src/vws_web_tools/: __init__.py
tests/: conftest.py  credentials.py  test_cli.py  test_create_database.py  test_create_vws_database.py  test_get_database_details.py  test_help.py  test_vumark_target_helpers.py  test_vumark_target_lookup.py
tests/help_outputs/: vws-create-vws-database.txt  vws-create-vws-license.txt  vws.txt
tests/test_help/: test_vws_command_help____.txt  test_vws_command_help___create_vws_cloud_database___.txt  test_vws_command_help___create_vws_database___.txt  test_vws_command_help___create_vws_vumark_database___.txt  test_vws_command_help___delete_vws_license___.txt  test_vws_command_help___get_vumark_instance_id___.txt  test_vws_command_help___show_license_details___.txt  test_vws_command_help___show_vumark_database_details___.txt  test_vws_command_help___upload_vumark_template___.txt  test_vws_command_help___wait_for_vumark_instance_id___.txt
