[flake8]
exclude=./.eggs,
        ./build/,

[doc8]
max-line-length = 2000
ignore-path = ./node_modules,./src/*.egg-info/,./docs/build/spelling/output.txt,./.eggs,./src/*/_setuptools_scm_version.txt,./docs/build

[metadata]
name = VWS Web Tools
description = Tools for interacting with the Vuforia Web Services (VWS) website.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = vuforia vws
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://github.com/VWS-Python/vws-web-tools
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
vws_web_tools =
    py.typed

[options.entry_points]
console_scripts =
    vws-web-tools = vws_web_tools:vws_web_tools_group
